updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a student learning who is learning to become a developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Jersey City, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Learning to snowboard and bouldering. PC Gaming.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I want to become either a backend developer or work with making a video game.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Jersey City</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to become a developer because I have always had interest in computers. I have spoken with many friends in the field and they definitely suggested getting into programming. I hope to get a job with either as a backend developer or something with making a video game.</p>
     </section>
 
     <footer id="footer">
