--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am currently a student learning who is learning to become a developer.</p>
+      <p>I am currently a student who is learning to become a developer.</p>
       <h1>Where I'm From</h1>
       <p>Jersey City, NJ</p>
       <h1>What are your favorite hobbies?</h1>
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Jersey City</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to become a developer because I have always had interest in computers. I have spoken with many friends in the field and they definitely suggested getting into programming. I hope to get a job with either as a backend developer or something with making a video game.</p>
+      <p>I want to become a developer because I have always had an interest in computers. I have spoken with many friends in the field and they definitely suggested getting into programming. I hope to get a job with either as a backend developer or something with making a video game.</p>
     </section>
 
     <footer id="footer">
